fix(brewery list page): fixed overflow-x
fixed overflow that made the page scroll horizontally

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@ body {
   background-color: #f2ec54;
   margin: 0;
   font-family: "Work Sans";
+  overflow-x: hidden;
 }
 
 input,
